--- a/FilmCompanyManagement/FilmCompanyManagement.Server/appsettings.json
+++ b/FilmCompanyManagement/FilmCompanyManagement.Server/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "FCMConnection": "UserId=admin;Password=Oracle_2024;Data Source=(DESCRIPTION=(ADDRESS=(PROTOCOL=TCP)(HOST=localhost)(PORT=1521))(CONNECT_DATA=(SID=test)))"
+    "FCMConnection": "Data Source=localhost:1521/FILMCOMPANYMANAGEMENT;User Id=admin;Password=Oracle_2024;"
   },
   "Logging": {
     "LogLevel": {
