--- a/FilmCompanyManagement/FilmCompanyManagement.Server/appsettings.json
+++ b/FilmCompanyManagement/FilmCompanyManagement.Server/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "FCMConnection": "Data Source=localhost:1521/FILMCOMPANYMANAGEMENT;User Id=admin;Password=Oracle_2024;"
+    "FCMConnection": "Data Source=localhost:1521/fcm;User Id=admin;Password=Oracle_2024;"
   },
   "Logging": {
     "LogLevel": {
