加入员工用户名密码

--- a/FilmCompanyManagement/FilmCompanyManagement.Server/appsettings.json
+++ b/FilmCompanyManagement/FilmCompanyManagement.Server/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "FCMConnection": "Data Source=localhost:1521/FILMCOMPANYMANAGEMENT;User Id=admin;Password=Oracle_2024;"
+    "FCMConnection": "Data Source=localhost:1521/[服务器名称];User Id=[用户名];Password=[密码];"
   },
   "Logging": {
     "LogLevel": {
