设置vue-router，同时更改了一下列表样式

--- a/FilmCompanyManagement/filmcompanymanagement.client/package.json
+++ b/FilmCompanyManagement/filmcompanymanagement.client/package.json
@@ -10,7 +10,8 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "vue": "^3.4.29"
+    "vue": "^3.4.38",
+    "vue-router": "4.4.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
