--- a/FilmCompanyManagement/FilmCompanyManagement.Server/FilmCompanyManagement.Server.csproj
+++ b/FilmCompanyManagement/FilmCompanyManagement.Server/FilmCompanyManagement.Server.csproj
@@ -10,6 +10,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Controllers\LoginController.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.SpaProxy">
       <Version>8.*-*</Version>
     </PackageReference>
@@ -29,7 +33,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <None Include="Controllers\LoginController.cs" />
   </ItemGroup>
 
 </Project>
