--- a/FilmCompanyManagement/filmcompanymanagement.client/package.json
+++ b/FilmCompanyManagement/filmcompanymanagement.client/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "axios": "^1.7.5",
     "vue": "^3.4.38",
     "vue-router": "4.4.0"
   },
@@ -17,6 +18,9 @@
     "@vitejs/plugin-vue": "^5.0.5",
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.23.0",
-    "vite": "^5.3.1"
+    "json5": "^2.2.3",
+    "mockjs": "^1.1.0",
+    "vite": "^5.3.1",
+    "vite-plugin-mock": "^3.0.2"
   }
 }
