--- a/FilmCompanyManagement/FilmCompanyManagement.Server/appsettings.json
+++ b/FilmCompanyManagement/FilmCompanyManagement.Server/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "FCMConnection": "Data Source=47.96.41.36:1521/fcm;User Id=ADMIN;Password=Tongji123;"
+    "FCMConnection": "Data Source=120.55.92.50:1521/fcm;User Id=ADMIN;Password=Oracle2024;"
   },
   "Logging": {
     "LogLevel": {
