首页通知板块需求

--- a/FilmCompanyManagement/FilmCompanyManagement.Server/FilmCompanyManagement.Server.csproj
+++ b/FilmCompanyManagement/FilmCompanyManagement.Server/FilmCompanyManagement.Server.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <Compile Remove="Controllers\LoginController.cs" />
+    <Compile Remove="Controllers\NotificationController.cs" />
   </ItemGroup>
 
   <ItemGroup>
@@ -33,6 +34,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="Controllers\NotificationController.cs" />
     <None Include="Controllers\LoginController.cs" />
   </ItemGroup>
 
