--- a/FilmCompanyManagement/FilmCompanyManagement.Server/FilmCompanyManagement.Server.csproj
+++ b/FilmCompanyManagement/FilmCompanyManagement.Server/FilmCompanyManagement.Server.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Controllers\AttendenceController.cs" />
     <Compile Remove="Controllers\LoginController.cs" />
     <Compile Remove="Controllers\NotificationController.cs" />
   </ItemGroup>
@@ -34,6 +35,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="Controllers\AttendenceController.cs" />
     <None Include="Controllers\NotificationController.cs" />
     <None Include="Controllers\LoginController.cs" />
   </ItemGroup>
