--- a/FilmCompanyManagement/filmcompanymanagement.client/package.json
+++ b/FilmCompanyManagement/filmcompanymanagement.client/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "serve": "vue-cli-service serve",
     "preview": "vite preview",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
