--- a/FilmCompanyManagement/FilmCompanyManagement.Server/FilmCompanyManagement.Server.csproj
+++ b/FilmCompanyManagement/FilmCompanyManagement.Server/FilmCompanyManagement.Server.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.WebApi.Cors" Version="5.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.8" />
     <PackageReference Include="Microsoft.AspNetCore.SpaProxy">
       <Version>8.0.8</Version>
