--- a/FilmCompanyManagement/filmcompanymanagement.client/package.json
+++ b/FilmCompanyManagement/filmcompanymanagement.client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.7.5",
+    "cors": "^2.8.5",
     "element-plus": "^2.8.1",
     "vue": "^3.4.38",
     "vue-router": "4.4.0"
